# radscan

./: .buildinfo  LICENSE  README.md  calibration.html  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: gh-pages.yml  lint.yml  test.yml
_sources/: index.rst.txt  modules.rst.txt
docs/: calibration.rst  conf.py  index.rst
radscan/: __init__.py  calibration.py  image.py  main.py  netod.py  roi.py  utils.py  workflow.py
resources/: ebt_calibration_lot03172103_BLUE.pkl  ebt_calibration_lot03172103_BLUE_simple.pkl  ebt_calibration_lot03172103_GREEN.pkl  ebt_calibration_lot03172103_GREEN_simple.pkl  ebt_calibration_lot03172103_RED.pkl  ebt_calibration_lot03172103_RED_simple.pkl
test/: README.md  example_01.py  example_02.py  example_03.py  test_placeholder.py
