[build-system]
requires = ["setuptools>=65.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radscan"
version = "0.1.0"
description = "RadScan - A Python package for dose calculation and calibration using EBT films"
authors = [
    { name = "Niels Bassler", email = "nbassler@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "numpy>=1.21",
    "tifffile>=2021.7.2",
    "roifile>=1.0.1",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.4"]

dev = ["flake8>=6.0.0", "pytest>=7.2.1"]

[tool.setuptools]
packages = ["radscan"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
exclude =
    .venv,
venv,
build,
dist,
    .git,
__pycache__,
    .eggs,
    *.egg

max-line-length = 120
[tool.yapf]
based_on_style = "pep8"
column_limit = 120
